Changelog
---------

1.1 (unreleased)
~~~~~~~~~~~~~~~~

- Declare zope security settings for classes when zope.security is present
  as the "class" ZCML directive was moved there.

1.0.0 (2009/07/06)
~~~~~~~~~~~~~~~~~~

- First point release.

1.0b17 (2009/06/14)
~~~~~~~~~~~~~~~~~~~

- Made the Zope security declaration for the repeat dictionary be conditional
  on the presence of zope.app.security instead of zope.app.component.

1.0b16 (2009/05/20)
~~~~~~~~~~~~~~~~~~~

- Updated run-time expression evaluator method to work after a recent
  architectural change in Chameleon. [malthe]

- Check that we have a non-trivial response-object before trying to
  set the content type. [malthe]

- Wrap ``sys.modules`` dictionary in an "opaque" dictionary class,
  such that the representation string does not list all loaded
  modules. [malthe]

1.0b15 (2009/04/24)
~~~~~~~~~~~~~~~~~~~

- Removed lxml extra, as we do no longer depend on it. [malthe]

- Make sure the path expression is a simple string, not
  unicode. [malthe]

- Detect path prefix properly for ViewPageTemplateFile usage in
  doctests. [sidnei]

- The ``template`` symbol is already set by the template base
  class. [malthe]

- Set Content-Type header, for backwards compatibility with
  zope.app.pagetemplate. [sidnei]

1.0b14 (2009/03/31)
~~~~~~~~~~~~~~~~~~~

- Updated language adapter to work with 'structure' meta
  attribute. [malthe]

1.0b13 (2009/03/23)
~~~~~~~~~~~~~~~~~~~

- When traversing on dictionaries, only exposes dictionary items
  (never attributes); this is to avoid ambiguity. [sidnei, malthe]

- Path expressions need to pass further path items in reverse order to
  traversePathElement, because that's what it expects. [sidnei]

1.0b12 (2009/03/09)
~~~~~~~~~~~~~~~~~~~

- Insert initial variable context into dynamic scope. The presence of
  these is expected by many application. [malthe]

1.0b11 (2009/03/05)
~~~~~~~~~~~~~~~~~~~

- If a namespace-acquired object provides ``ITraversable``, use path